# monorepo-with-csharp-rust

./: .gitignore  Cargo.toml  LICENSE  MonorepoWithCSharpRust.sln  README.md
.devcontainer/: devcontainer.json
csharp/MonorepoWithCSharpRust.App/: MonorepoWithCSharpRust.App.csproj  Program.cs
csharp/MonorepoWithCSharpRust.Math/: FFI.cs  MonorepoWithCSharpRust.Math.csproj
csharp/MonorepoWithCSharpRust.Tests/: FFITest.cs  MonorepoWithCSharpRust.Tests.csproj
dotnet/: RustFFI.sln
dotnet/RustFFI/: Module.cs  RustFFI.csproj
dotnet/RustFFI.App/: Program.cs  RustFFI.App.csproj
dotnet/RustFFI.Tests/: ModuleTests.cs  RustFFI.Tests.csproj
rust/math/: Cargo.toml
src/: lib.rs
